# Geister-cpp-lib

./: .gitignore  CMakeLists.txt  Geister.cpp  Geister.hpp  Player.cpp  Player.hpp  PlayerTest.cpp  README.md  Simulator.cpp  Simulator.hpp  SimulatorTest.cpp  build.bat  build.sh  client.cpp  competition.cpp  hand.hpp  makefile  unit.cpp  unit.hpp
Player/: HumanPlayer.hpp  all.hpp  chototsuPlayer.cpp  chototsuPlayer.hpp  humanPlayer.hpp  randomPlayer.cpp  randomPlayer.hpp
Simulator/: Simulator.cpp  Simulator.hpp
chototsu/: chototsuPlayer.cpp  chototsuPlayer.hpp
doc/: develop.md  guide.md  library.md  spec.md  usage.md
include/: Simulator.hpp  geister.hpp  hand.hpp  player.hpp  random.hpp  result.hpp  simulator.hpp  tcpClient.hpp  unit.hpp
include/impl/: geister.hpp  unit.hpp
include/lib/clx/: sockaddress.h
pytools/: analyzer.py  client.py  competition.py  console.py  execute.py  geister.py  gui.py  log.txt  logConverter.py
random/: randomPlayer.cpp  randomPlayer.hpp
src/: Geister.cpp  Simulator.cpp  client.cpp  competition.cpp  geister.cpp  player.cpp  simulator.cpp  tcpClient.cpp  unit.cpp
